--- a/style.css
+++ b/style.css
@@ -16,14 +16,13 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 0.5rem;
+  padding: 1rem;
   width: 600px;
   margin: auto;
 }
 
 #etch-grid {
   display: grid;
-  grid-template-columns: repeat(16, 1fr);
   margin: 1rem auto;
   height: 600px;
   width: 600px;
@@ -40,6 +39,11 @@ button {
   padding: 0.7rem 1.5rem;
   border: none;
   border-radius: 2rem;
+  width: 10rem;
+}
+
+button.small {
+  width: 7rem;
 }
 
 button::before {
@@ -50,7 +54,7 @@ button::before {
   z-index: -1;
   box-shadow: inset 0px 0px 0px 5px var(--clr-primary);
   opacity: 0;
-  transition: opacity 300ms ease-in-out;
+  transition: opacity 150ms ease-out;
 }
 
 button:hover::before {
@@ -61,5 +65,37 @@ button.active::before {
   opacity: 0.8;
 }
 
-.clear-btn {
+input {
+  font-family: inherit;
+  font-size: inherit;
+  padding: 0.5rem;
+  width: 3rem;
+}
+
+.form-curtain {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  inset: 0;
+  background-color: hsla(0 0% 0% / 0.4);
+}
+
+.form-container {
+  width: 300px;
+  height: 150px;
+  padding: 1rem;
+  background-color: var(--clr-neutral-100);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  box-shadow: 0px 0px 10px 5px hsla(0 0% 0% / 0.24);
+}
+
+.apply-size-btn::before,
+.cancel-size-btn::before {
+  z-index: 1;
 }
