--- a/style.css
+++ b/style.css
@@ -21,21 +21,48 @@ body {
   margin: auto;
 }
 
-.mode-options {
+.main-section {
   display: flex;
-  flex-wrap: wrap;
-  width: 800px;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  margin: 2rem auto;
+  margin: 1rem 0 2rem 0;
+  gap: 1rem;
+}
+
+.left-options,
+.right-options,
+.option-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.left-options,
+.right-options {
+  gap: 2rem;
+  width: 100px;
+}
+
+.option-container {
+  gap: 0.5rem;
 }
 
 #etch-grid {
   display: grid;
-  margin: 1rem auto;
+  /* margin: 1rem auto; */
   height: 600px;
   width: 600px;
   box-shadow: 0px 0px 10px 2px hsla(0 0% 0% / 0.24);
+}
+
+.mode-options {
+  display: flex;
+  flex-wrap: wrap;
+  width: 600px;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
 }
 
 button {
@@ -79,6 +106,18 @@ input {
   font-size: inherit;
   padding: 0.5rem;
   width: 3rem;
+  accent-color: var(--clr-primary);
+}
+
+input[type='color'] {
+  padding: 0.125rem;
+  border: none;
+  height: 2rem;
+}
+
+input[type='checkbox'] {
+  width: 1rem;
+  height: 1rem;
 }
 
 .form-curtain {
